[package]
name = "sender"
version = "0.1.0"
authors = ["Rafael Trevisan <rafa.trevi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.22"
rumqttc = "0.0.5"
async-channel = "1.1.1"
rand = "0.7.3"
log = "0.4.11"